--- a/styles/styles.css
+++ b/styles/styles.css
@@ -3,10 +3,10 @@ img {
     width: 150px;
     height: 200px;
     opacity:75%;
+    cursor:pointer;
 }
 
 img:hover {
-   
     opacity:100%;
     transition: transform 0.7s ease;
     transform: scale(1.2);
@@ -14,7 +14,9 @@ img:hover {
 
 h3 {
     font-size: 20px;
-    color: black;
+    color: rgb(233, 225, 225);
+    display:block;
+    background-color: #797777;
 }
 #MisLibros div {
     display: inline-block;
@@ -26,48 +28,18 @@ h3 {
     justify-content: center;
     align-items: center;
     box-sizing: border-box;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
 }
 
-form {
-    display: inline-block;
-    margin: 30px 10px 30px 0px;
-    padding: 5px;
-    padding-top: 10px;
-    position:relative;
-    left: 5px;
-    width: 25%;
-    border-radius: 20px 0 0 20px;
-    border: solid 2px rgb(70, 71, 71);
-    text-align: left;
-}
-
-#divActividades {
-    display: inline-flex;
-    width: 70%;
-    border: solid 2px rgb(70, 71, 71);
-    height: 280px;
-    position: relative;
-    top:-98px;
-    border-radius: 0 20px 20px 0;
-    justify-content: center; 
-    align-items: center;
-    font-size: 60px;
-    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
-}
-
-#divActividades label{
-    color:#b4b1b1;
-}
-
-input, textarea, label {
+input, label, button, textarea {
     position:relative;
     left:30px;
     color:black;
-    width: 235px;
+    width: 300px;
 }
 
 #boton {
-    left:57px;
+    left:90px;
     margin: 5px auto;
     width: 190px;
     position: center;
@@ -106,7 +78,7 @@ h2 {
 }
 
 h3 {
-    margin: 10px;
+    margin: 0 auto;
 }
 
 p {
@@ -119,12 +91,103 @@ section {
     border:solid 3px rgb(110, 110, 110);
     border-radius: 30px;
     margin: 10px auto;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
 }
 #MisLibros {
     height: 400px;
 }
 #MisActividades {
-    height: 380px;
+    height: 400px;
+    margin-bottom: 0;
+}
+
+.divh3 {
+    width: 500px;
+    height: 28px;
+    align-items: center;
+
+    border-radius: 0 10px 0 10px;
+    background-color: #807c7c;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.2);
+    margin: 10px auto;
+}
+
+#agregarActividades {
+    display: inline-block;
+    margin: 15px 10px 30px 0px;
+    padding: 5px;
+    padding-top: 10px;
+    position:relative;
+    left: 5px;
+    width: 360px;
+    border-radius: 20px;
+    border: solid 2px rgb(70, 71, 71);
+    text-align: left;
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.3);
+}
+
+#divActividades {
+    display: inline-flex;
+    width: 90%;
+    border: solid 2px rgb(70, 71, 71);
+    border-top: none;
+    height: 300px;
+    position:relative;
+    border-radius: 20px;
+    justify-content:space-around; 
+    align-items: center;
+    font-size: 60px;
+    margin: 10px 0 30px 0;;
+    font-family:'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background-color: rgb(226, 226, 226);
+    box-shadow: 0px 0px 10px 5px rgba(0, 0, 0, 0.5);
+}
+
+#divActividades label{
+    color:#b4b1b1;
+}
+
+.divTarjetas {
+    margin: 10px;
+    width: 150px;
+    height: 220px;
+    border: solid 2px black;
+    background-color: rgb(173, 170, 167);
+    color:rgb(112, 112, 108);
+    border-radius: 10px;
+    box-shadow: 0px 0px 10px 5px rgba(29, 28, 28, 0.4);
+}
+
+.imgAct {
+    width: 140px;
+    height: 160px;
+    border: solid 2px rgb(82, 72, 72);
+}
+
+.imgAct:hover {
+    opacity:100%;
+    transition: transform 0.7s ease;
+    transform: scale(1.05);
+}
+
+.tituloAct {
+    font-size: 15px;
+}
+
+.descAct {
+    font-size: 12px;
+}
+
+footer {
+    width: 100%;
+    height: 55px;
+    background-color: black;
+    color:antiquewhite;
+    box-shadow: 0px 0px 10px 5px rgba(255, 255, 255, 0.7);
+}
+
+footer label{
+    color:antiquewhite;
 }
 
 body {
